[package]
name = "xtables-client"
version = "0.0.3"
edition = "2024"

[dependencies]
zmq = "0.10.0"
tokio = { version = "1.47.1", features = ["full"] }
prost = "0.14.1"
prost-types = "0.14.1"
slotmap = "1.0.7"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[build-dependencies]
cc = "1.0"
prost-build = "0.14.1"
