[package]
name = "xtables_server"
version = "0.0.3"
edition = "2024"
description = "A Rust server for managing xtables over ZeroMQ."
include = ["../proto"]

[dependencies]
zmq = "0.10.0"
tokio = { version = "1.47.1", features = ["full"] }
prost = "0.14.1"
prost-types = "0.14.1"
clap = { version = "4.5.47", features = ["derive"] }
once_cell = "1.21.3"
log = { version = "0.4.28", features = ["std", "serde"] }

[build-dependencies]
cc = "1.0"
prost-build = "0.14.1"
